apps/monitoring/components/reverse-proxy-istio/istio-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: monitoring-reverse-proxy
spec:
  hosts:
    - monitoring
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: reverse-proxy
            port:
              number: 80
